# DB-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  models.py  pyproject.toml  semantic_layer.yaml
.claude/: launch.json  settings.json
.claude/agents/: sql-security-reviewer.md
.claude/hooks/: guard_sql.py  review_sql_on_stop.py  ruff_format.py
.claude/skills/run-tests/: SKILL.md
docs/superpowers/plans/: 2026-06-16-db-layer-integration-tests.md  2026-06-16-db-layer-readonly-execution.md  2026-06-16-fastapi-query-endpoint.md  2026-06-16-graph-layer.md  2026-06-16-llm-layer.md  2026-06-16-observability-run-logging.md  2026-06-17-gene-resolution-wiring.md  2026-06-17-gene-resolver-tool.md  2026-06-17-multi-domain-routing.md  2026-06-18-duckdb-sandbox.md  2026-06-18-modeling-detail-tables.md  2026-06-18-modeling-domain.md  2026-06-18-mutation-domain.md  2026-06-22-example-retrieval.md  2026-06-22-stats-routing-prompts.md  2026-06-22-stats-sandbox-phase2.md  2026-06-23-modeling-panel-data.md  2026-06-23-stats-registry-additions-2.md  2026-06-23-stats-registry-additions.md
docs/superpowers/specs/: 2026-06-16-db-layer-integration-tests-design.md  2026-06-16-db-layer-readonly-execution-design.md  2026-06-16-fastapi-query-endpoint-design.md  (+16 more)
src/db_agent/: __init__.py  config.py
tests/: _rec_helpers.py  test_api_endpoint.py  test_api_observer_selection.py  test_api_schemas.py  test_config_aliases.py  test_db_explain.py  test_db_mapping.py  test_db_replica_smoke.py  test_db_result.py  test_examples_build.py  test_examples_retriever.py  test_examples_store.py  test_gene_resolver.py  test_graph_answer_failsoft.py  test_graph_chain.py  test_graph_nodes.py  test_graph_state.py  test_llm_agent.py  test_llm_client.py  test_llm_embedding.py  test_llm_prompts.py  test_llm_rerank.py  test_llm_stats.py  test_mas_api.py  test_mas_router.py  test_mas_supervisor.py  test_observability_audit.py  test_observability_integration.py  test_observability_observer.py  test_observability_record.py  test_observability_report.py  test_observability_review.py  test_observability_sample.py  test_permission.py  test_recommend_api.py  test_recommend_model.py  test_recommend_pipeline.py  test_recommend_report.py  test_recommend_scoring.py  test_sandbox_engine.py  (+16 more)
tests/eval/: conftest.py  golden.yaml  harness.py  test_execution_accuracy.py
tests/integration/: conftest.py  test_audit_integration.py  test_gene_resolver_integration.py  test_replica_integration.py
(+74 files in other folders)
