[project]
name = "db-agent"
version = "0.1.0"
description = "Natural-language query & analysis agent for the mouse tumor model database (Phase 1 MVP: efficacy domain)"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=0.2",
    "litellm>=1.50",
    "sqlglot>=25",
    "duckdb>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary,pool]>=3.2",
    "pyyaml>=6.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "scipy>=1.13",
    "lifelines>=0.29",
    "numpy>=1.26",
    "httpx>=0.27",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-m", "not integration and not eval"]
asyncio_mode = "auto"
markers = [
    "integration: requires a live PostgreSQL (DBAGENT_REPLICA_DSN); deselected by default",
    "eval: execution-accuracy benchmark; needs live gateway + replica; deselected by default",
]

[tool.ruff]
# Project targets 3.12+, but modules stay importable on 3.11 for local testing.
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import sorting, UP: pyupgrade, B: bugbear,
# FA: flake8-future-annotations (keeps annotations PEP 563-safe).
select = ["E", "F", "I", "UP", "B", "FA"]

[tool.ruff.lint.isort]
# Enforce the `from __future__ import annotations` header the conventions require.
required-imports = ["from __future__ import annotations"]
